[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Images/TitleBackground.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Theme/title_container_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/drift_type/Drifttype Solid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Theme/file_dialog_theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/TitleScene/title_scene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/TitleScene/file_upload.gd" type="Script" id=7]
[ext_resource path="res://Scenes/TitleScene/LoadProgress.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/drift_type/Drifttype.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=10]
size = 85
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 85
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_right = -1.33484
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 68.0108
margin_top = 18.2161
margin_right = 992.011
margin_bottom = 566.216
rect_min_size = Vector2( 400, 140 )
theme = ExtResource( 4 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON files" )
current_dir = "/Users/Cameron/Documents/GitHub/Visualizer/visualizer"
current_path = "/Users/Cameron/Documents/GitHub/Visualizer/visualizer/"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/Menu"]
margin_right = 924.0
margin_bottom = 175.0

[node name="SolidTitle" type="Label" parent="MarginContainer/Menu/TitleContainer"]
margin_left = 157.0
margin_right = 767.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.870588, 0.662745, 0.364706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Coders 
of the Corn"
align = 1

[node name="OutlineTitle" type="Label" parent="MarginContainer/Menu/TitleContainer"]
margin_left = 157.0
margin_right = 767.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.560784, 0.294118, 0.0588235, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Coders
of the Corn"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="CenterContainer" parent="MarginContainer/Menu"]
margin_top = 179.0
margin_right = 924.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/Menu/CenterRow"]
margin_left = 286.0
margin_top = 136.0
margin_right = 637.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="StartButton" type="Button" parent="MarginContainer/Menu/CenterRow/Buttons"]
margin_right = 175.0
margin_bottom = 73.0
text = "START"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/Menu/CenterRow/Buttons"]
margin_left = 225.0
margin_right = 351.0
margin_bottom = 73.0
text = "QUIT"
flat = true

[node name="Version" type="Label" parent="MarginContainer/Menu"]
margin_top = 529.0
margin_right = 924.0
margin_bottom = 548.0
text = "MechMania 27 | Version 0.0.0"
align = 1

[node name="LoadProgress" parent="MarginContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 598.0
[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="gamelog_ready" from="FileDialog" to="." method="_on_FileDialog_gamelog_ready"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
